# MicroPython_Claude_Assistant

./: .gitignore  README.md  ble_daemon.py  ble_test_send.py  buddies.py  config.py  hook_bridge.py  hook_probe.py  main.py  protocol.py  pyproject.toml  state.py  test_cwd_session.py
.claude/: CLAUDE.md  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
daemon/: ble_daemon.py  hook_bridge.py  pair_device.py  smoke.py  transport.py
device/: ble_uart.py  buddy.py  char_among_us.py  char_cat.py  char_creeper.py  char_custom.py  char_ghost.py  char_kirby.py  char_pikachu.py  char_robot.py  character.py  config.py  display.py  display_renderer.py  light_renderer.py  logo_data.py  main.py  main_mvp.py  play_pcm_loop.py  protocol.py  queue.py  renderer.py  rotating_logger.py  session_manager.py  state.py  transport.py  voice_task.py
docs/: state_machine.md
hooks/: hooks.json  probe_hooks.json
research/: claudecode_real_conversation_findings_2026-05-19.md  claudecode_real_manual_scenario_prompt_v1.md  daemon_state_machine_table_v1.md  e2e_coverage_audit_v1.md  e2e_wire_experiment_v1.md  heartbeat_analysis_v5.md  hook_probe_settings_template.json  hook_to_device_mapping_v1.md  install_mechanism_v1.md  probe_runbook_v1.md  protocol_v5_display_only.md  state_machine_verification_v1.md  state_machine_verification_v1_findings.md  v5_implementation_checklist.md  v5_implementation_summary.md  v6_slot_stability_fix.md
scripts/: analyze_probe.py  analyze_real_wire_capture.py  capture_real_claude_wire.py  check_real_install.py  demo_v5.py  flash_device.py  (+12 more)
(+96 files in other folders)
